# wikidata-phonemes

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  lock
.sqlx/: query-068f4e7e0d85e83a6da468dd38b8280cfd42ae62ca00f7a28eee246a7e035ae8.json  query-0e82d71fe24c7cdd7b7016a60de531ccd42c265bdfd87d3ba0cd73a5aba8c6dc.json  query-1c7f0f90ec66fe12cfe82371f7631b2fa1e475b857a7f61d403d453a57c0ef62.json  query-48c9888545d6e226ea1e04e42587a3424181db129250e2edb76c93646bc95eff.json  query-61af382c8d901ba5bd81f2f6d397a223c5c6cc4c54af5f02812e3472b2367b22.json  query-658ef9d32d1bd3b79fc034ac73eb73c3c796fcf9198ab17c38e8b40a67d56376.json  query-88431b0f5c075d851301d11f3d96267d5692a96b51379663a1eca81e044239f3.json  query-a65d579d1bae22be904de77f44dc90fe79b9406c44e3299b134ca9d11be3f5b3.json  query-aa47fb89f3588bb2060c28c2622266010ffcfbf2fd62d298c8e3fbfae09fad29.json  query-b9dafb1aba015ce4f7a054c24d2ddacd1031223fdf4b346bafe47d0c8a0204b2.json  query-bda43c1ad0abd6f7f0d1b95aa654657143f4f37b6c01e839cce28fc90585edc3.json  query-c76df35a1183fc0e6d17b3e175be78e89842f89d03188438fb9b63b2a50f0cba.json  query-cf256b1497bfe23354c8b81b8830dba07769af5f6473041d74f58c4e6638cbdd.json  query-da97c0fdf4c79d98715943a4aab75c81f8516e55c4eee14f42be47dc38e7846f.json  query-e5f8c189b611e4d4995bdd60fb368dddf1c49aac1972c942640e45d5d4586b9a.json
migrations/: 20240721224033_create_user_table.up.sql  20240723133841_languages_table.up.sql  20240723134000_populate_languages_table.up.sql  20240723154101_create_language_status_table.down.sql  20240723154101_create_language_status_table.up.sql  20240725035315_remove_semi_protected_languages.up.sql
src/: app.rs  client.rs  error.rs  main.rs  wikidata.rs
templates/: error.html  index.html  layout.html
(+40 files in other folders)
